--- a/home.html
+++ b/home.html
@@ -22,6 +22,14 @@
         </div>
     </header>
     <section class="hero">
+        <div class="hero-section">
+            <h2>Welcome to our Recipe Collection</h2>
+            <p>Search mouth watering recipes to satisfy your craving</p>
+            <form action="a" class="search-box">
+                <input type="text" placeholder="Search Recipe">
+                <button type="submit">Search</button>
+            </form>
+        </div>
         
 
     </section>
