recipe section done

--- a/home.html
+++ b/home.html
@@ -33,6 +33,15 @@
         
 
     </section>
+    <section class="recipes">
+        <h2>Featured Recipes</h2>
+        <div class="recipe-section">
+            <div class="recipe-card">
+                <img src="images/dish-1.jpg" alt="">
+
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
