--- a/home.html
+++ b/home.html
@@ -70,6 +70,11 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div>
+            <p>&COPY;2024 Food Recipes</p>
+        </div>
+    </footer>
     
 </body>
 </html>
