--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
         <div class="container">
             <h1 class="logo">Delicious Recipes</h1>
             <nav>
+                <div class="menu-icon">&#9776;</div>
                 <ul class="nav-list">
                     <li>Home</li>
                     <li>About</li>
