--- a/recipe.html
+++ b/recipe.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="recipstyle.css">
 </head>
 <body>
+    
 </header>
 <div class="container">
     <div class="recipeimg">
-        <img src="images/Dhaba-Style-Chicken-Curry-2-500x375.jpg" alt="">
+        <img src="images/dish-1.jpg" alt="">
     </div>
     <div class="recipeinformation">
-        <h1>SPICY CHICKEN CURRY WITHOUT COCONUT MILK</h1>
+        <h1> STRAWBERY CUSTARD PUDDING</h1>
         <p class="description">this spicy chicken curry is one of the famous dishes among Sri Lankans. The majority of people use coconut milk for this chicken curry, but I am going to cook without a single drop of coconut milk or cream.</p>
         <div class="recipe-prep-time">
             <h3>Preparation time</h3>
