--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                 <img src="images/dish-1.jpg" alt="">
                 <h2>Strawbery Custard</h2>
                 <p>delisious dessert all favor</p>
-                <a href="a">View Recipe</a>
+                <a href="http://127.0.0.1:5500/recipe.html">View Recipe</a>
                 
 
             </div>
