--- a/home.html
+++ b/home.html
@@ -63,9 +63,9 @@
             </div>
             <div class="recipe-card">
                 <img src="images/dish-4.jpg" alt="">
-                <h2>Strawbery Custard</h2>
+                <h2>Gotukola sambal</h2>
                 <p>delisious dessert all favor</p>
-                <a href="a">View Recipe</a>
+                <a href="http://127.0.0.1:5500/recipe4.html">View Recipe</a>
                 
 
             </div>
