--- a/recepi3.html
+++ b/recepi3.html
@@ -13,7 +13,7 @@
         <img src="images/dish-3.jpg" alt="">
     </div>
     <div class="recipeinformation">
-        <h1>  FISH STREW CURRY WITH CHEESE</h1>
+        <h1>   CHICKENBBQ WITH CHEESE</h1>
         <p class="description">this spicy chicken curry is one of the famous dishes among Sri Lankans. The majority of people use coconut milk for this chicken curry, but I am going to cook without a single drop of coconut milk or cream.</p>
         <div class="recipe-prep-time">
             <h3>Preparation time</h3>
