--- a/home.html
+++ b/home.html
@@ -55,9 +55,9 @@
             </div>
             <div class="recipe-card">
                 <img src="images/dish-3.jpg" alt="">
-                <h2>Strawbery Custard</h2>
+                <h2> Chicken BBQ</h2>
                 <p>delisious dessert all favor</p>
-                <a href="a">View Recipe</a>
+                <a href="http://127.0.0.1:5500/recepi3.html">View Recipe</a>
                 
 
             </div>
