--- a/html/recepi3.html
+++ b/html/recepi3.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="recipstyle.css">
+    <link rel="stylesheet" href="/css/recipstyle.css">
 </head>
 <body>
-    
 </header>
 <div class="container">
     <div class="recipeimg">
-        <img src="images/dish-2.jpg" alt="">
+        <img src="/images/dish-3.jpg" alt="">
     </div>
     <div class="recipeinformation">
-        <h1>  FISH STREW CURRY WITH CHEESE</h1>
+        <h1>   CHICKEN BBQ WITH CHEESE</h1>
         <p class="description">this spicy chicken curry is one of the famous dishes among Sri Lankans. The majority of people use coconut milk for this chicken curry, but I am going to cook without a single drop of coconut milk or cream.</p>
         <div class="recipe-prep-time">
             <h3>Preparation time</h3>
@@ -96,7 +95,7 @@
                     <p>Fat</p>
                     <p class="amount">22g</p>
                 </div>
-                <a href="images/Easy Chicken Curry without Coconut Milk or Cream _ KETO _ Spicy.pdf" download class="btn-btn2">Download Recipe</a>
+                <a href="/images/Easy Chicken Curry without Coconut Milk or Cream _ KETO _ Spicy.pdf" download class="btn-btn2">Download Recipe</a>
             </div>
         </div>
 
