--- a/html/home.html
+++ b/html/home.html
@@ -48,7 +48,7 @@
             <div class="recipe-card">
                 <img src="/images/dish-2.jpg" alt="">
                 <h2>Fish Strew Curry</h2>
-                <p>delisious dessert all favor</p>
+                <p>delisious dessert all favor fo you</p>
                 <a href="http://127.0.0.1:5500/html/recipe2.html">View Recipe</a>
                 
 
